[tool.poetry]
name = "docx-form"
version = "0.1.0"
description = "A library that allows the editing of form XML components in .docx files."
authors = ["Reece Bourgeois <reecebourgeois@gmail.com>", "Daniel Howard <daniel.howard@selu.edu>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
