[tool.poetry]
name = "docx-form"
version = "1.0.2"
description = "A library that allows the editing of content control XML components in .docx files."
authors = ["Reece Bourgeois <reecebourgeois@gmail.com>", "Daniel Howard <daniel.howard@selu.edu>", "Robert Herbert <robert.herbert@selu.edu>", "Ryan McClelen <ryan.mcclelen@selu.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.1.2"
lxml = "^4.9.1"
Sphinx = "^5.1.1"

[tool.poetry.dev-dependencies]
black = {version = "^22.6.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
